AM_CFLAGS = --pedantic -Wall -std=gnu99 -O0 -I libmicro/include
bin_PROGRAMS = lapcontrol

lapcontrol_SOURCES = main.c libmicro/proto/lap.c libmicro/can/can-tcp.c libmicro/can/can-uart.c blutils.c libmicro/uart/uart-host.c can-posix.c libmicro/can/can-encap.c libmicro/utils/debug.c libmicro/utils/crc16.c libmicro/utils/termio.c cmds-base.c cmds-test.c cmds-flash.c cmds-borg.c cmds-mood.c cansole.c cmds-musicd.c cmds-powercommander.c cmds-treppenblink.c cmds-canir.c cmds-cantemp.c cmds-bastel.c cmds-powermeter.c cmds-gateway.c
